--- a/Assets/Runtime/Runtime.asmdef
+++ b/Assets/Runtime/Runtime.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:9619b3145dfce7148972f2806e68e3e1",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:174b432621f01fb418be26ffc6c90e22",
+        "GUID:8621d9949b0c96543ac733223ddc6f3c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
