--- a/Assets/Runtime/Runtime.asmdef
+++ b/Assets/Runtime/Runtime.asmdef
@@ -6,7 +6,8 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:174b432621f01fb418be26ffc6c90e22",
-        "GUID:8621d9949b0c96543ac733223ddc6f3c"
+        "GUID:8621d9949b0c96543ac733223ddc6f3c",
+        "GUID:5c01796d064528144a599661eaab93a6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
