--- a/Assets/Runtime/Runtime.asmdef
+++ b/Assets/Runtime/Runtime.asmdef
@@ -7,7 +7,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:174b432621f01fb418be26ffc6c90e22",
         "GUID:8621d9949b0c96543ac733223ddc6f3c",
-        "GUID:5c01796d064528144a599661eaab93a6"
+        "GUID:5c01796d064528144a599661eaab93a6",
+        "GUID:603cf9f7b75565840aa8cf5576088a59"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
