feat:UIList新增生命周期 Init(注入) -> OnShow -> ShowData -> OnHide

--- a/Assets/Plugins/LoopScrollRect/Runtime/LoopScrollRect.Runtime.asmdef
+++ b/Assets/Plugins/LoopScrollRect/Runtime/LoopScrollRect.Runtime.asmdef
@@ -2,7 +2,8 @@
     "name": "LoopScrollRect.Runtime",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.UI"
+        "UnityEngine.UI",
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
